# weather_mcp

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  api.py  main.py  pyproject.toml  weather.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
frontend/: nuxt.config.ts  package-lock.json
frontend/app/pages/: index.vue
tests/: test_api.py
