[project]
name = "weather"
version = "0.1.0"
description = "MCP-powered weather app with a FastAPI bridge and Nuxt frontend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
weather-api = "main:main"
